<resources>
    <string name="app_name">Pawso</string>


    <string name="login_main">LOGIN</string>
    <string name="register_2main">Register</string>
    <string name="btnlogin">Login</string>
    <string name="register_main">Register</string>
    <string name="tv_password">Password</string>
    <string name="tv_email" translatable="false">Email</string>
    <string name="login" translatable="false" />
    <string name="email" translatable="false" />
    <string name="tv_pass">Password</string>
    <string name="tv_namereg">Name</string>
    <string name="tv_emailreg" translatable="false">Email</string>
    <string name="name" translatable="false" />
    <string name="signup">Signup</string>
    <string name="registration" translatable="false" />

    <string name="action_next" translatable="false">Next</string>
    <string name="label_on_boarding_name" translatable="false" />
    <string name="prompt_on_boarding_full_name_hint" translatable="false" />
    <string name="next">Next</string>
    <string name="your_are">Your are</string>
    <string name="label_on_boarding_birth_date">Your birthdate is</string>
    <string name="label_on_boarding_birth_date_advice">Your birthdate will be sent to the shelter</string>
    <string name="label_on_boarding_birth_date_warning">You should be over 18 years old or asking to an adult to adopt</string>
    <string name="label_on_boarding_description">Introduce yourself</string>
    <string name="prompt_on_boarding_description_hint">Tell us why you want to adopt cats, which home you live in, who the family members are and if you have other pets</string>
    <string name="profile_title_uppercase" translatable="false" />
    <string name="message_title_uppercase" translatable="false" />
    <string name="favorites_title_uppercase" translatable="false" />
    <string name="explore_title_uppercase" translatable="false" />

    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="circular_imageview" translatable="false">Circular ImageView</string>
    <string name="gender" translatable="false" />
    <string name="firstname" translatable="false" />
    <string name="age" translatable="false" />
    <string name="mood" translatable="false" />
    <string name="profile_image" translatable="false" />
    <string name="my_profile_details">My profile details</string>
    <string name="action_logout">Log Out</string>
    <string name="my_email_address">My email address</string>
    <string name="my_birthdate">My birthdate</string>
    <string name="textview" translatable="false" />
    <string name="todo" translatable="false">TODO</string>
    <string name="description" translatable="false">Description</string>
    <string name="N" translatable="false" />
    <string name="m" translatable="false" />
    <string name="d" translatable="false" />
    <string name="contact_the_shelter">Adopt me</string>
    <string name="todoo" translatable="false">TODO</string>
    <string name="european">European</string>
    <string name="vaccinated_typhus_coryza">Vaccinated Typhus/Coryza</string>
    <string name="dewormed">Dewormed</string>
    <string name="electronic_chip">Electronic chip</string>
    <string name="sterilized">Sterilized</string>

</resources>